# robot_RL

./: .gitignore  CHANGELOG.md  PROJECT_STATE.md  README.md  ROADMAP.md  agent.md
.jz_isaac_lab.git.backup/: config  index  packed-refs
Jz_descripetion-main/Jz_descripetion-main/: .gitattributes
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/: CMakeLists.txt  package.xml
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/config/: joint_names_robot urdf.10.8.SLDASM.yaml  view_urdf.rviz
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/launch/: display.launch  display.launch.py  gazebo.launch
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/meshes/collision/: hand1_link.STL  hand2_link.STL  left_arm_link1.STL  left_arm_link2.STL  left_arm_link3.STL  left_arm_link4.STL  left_arm_link5.STL  right_arm_link10.STL  right_arm_link2.STL  right_arm_link8.STL
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/meshes/visual/: body1_link.STL  body2_link.STL  right_arm_link1.STL  right_arm_link9.STL
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/scripts/: simple_joint_state_gui.py
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/test/: test_simple_joint_state_gui.py
Jz_descripetion-main/Jz_descripetion-main/robot_urdf/urdf/: robot urdf.10.8.SLDASM.csv  robot urdf.10.8.SLDASM.urdf  robot urdf.10.8.SLDASM.urdf.bak  robot_model.mjcf.xml  robot_model_isaac_v2.urdf
RL_jzrobot-main/RL_jzrobot-main/: LICENSE  README.md
harness/context/: README.md  docker_isaac_lab.md  reach_task_anatomy.md  server_migration.md
harness/contracts/: README.md  rl_tasks.md
harness/decisions/: README.md
harness/tasks/: README.md  reach_training.md  reach_tuning_log.md
jz_isaac_lab/: .gitignore
jz_isaac_lab/docs/: openarm_bimanual_training_migration_report.md
robot_simulator/: CHANGELOG.md  PROJECT_STATE.md
robot_simulator-main/: .gitignore  HANDOFF.md  README.md  introduce.md
robot_simulator-main/docs/: PROJECT_STRUCTURE.md  README.md
robot_simulator-main/isaac_sim_implementations/: .gitignore  README.md
robot_simulator-main/isaac_sim_implementations/standalone_ik_solver/: package.xml  setup.cfg  setup.py
robot_simulator-main/isaac_sim_implementations/standalone_ik_solver/standalone_ik_solver/: __init__.py  __main__.py  config.py  kinematics.py  node.py
robot_simulator-main/isaac_sim_implementations/standalone_ik_solver/tools/: benchmark_left_arm_ik_topics.py
robot_simulator-main/mojuco/: README.md  package.xml  setup.cfg  setup.py
robot_simulator-main/mojuco/config/: sim_params.yaml
robot_simulator-main/mojuco/launch/: mujoco_sim.launch.py  mujoco_sim_headless.launch.py
robot_simulator-main/mojuco/mujoco_simulator/: __init__.py  mujoco_sim_node.py
robot_simulator-main/rl/: README.md  __init__.py  jz_mujoco_reach_env.py  (+1 more)
(+173 files in other folders)
